[project]
name = "Comfyui-DDDDEEP"
description = """
A collection of nodes for ComyUI.
- "PromptTermList (1-6)" nodes to help with the creation of Prompts.
"""
version = "1.0.0"
license = {text = "MIT License"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utility", "TermLists"]

[project.urls]
Repository = "https://github.com/DDDDEEP/ComfyUI-DDDDEEP"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "DDDDEEP"
DisplayName = "ComfyUI-DDDDEEP"

[tool.poetry.dependencies]
python = "^3.8"
